Fix front-page right-side screwup which was causing scores to be out of place

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -26,8 +26,8 @@
   padding-right: 5%;
 }
 
-.score_examples .politicians_score {
-  width: 40%;
+.score_examples .politician_score {
+  width: 35%;
   float: right;
 }
 
